--- a/FashionShop-Admin/Views/Shared/_Layout.cshtml
+++ b/FashionShop-Admin/Views/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
     <!-- plugin css file  -->
     <link rel="stylesheet" href="~/css/themify-icons/themify-icons.css">
     <!-- project css file  -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- SweetAlert2  -->
     @await RenderSectionAsync("Styles",required:false)
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/ebazar.style.min.css">
