--- a/FashionShop-Admin/Views/Contacts/Index.cshtml
+++ b/FashionShop-Admin/Views/Contacts/Index.cshtml
@@ -74,7 +74,10 @@
                                         </td>
                                         <td>
                                             <div class="btn-group" role="group" aria-label="Basic outlined example">
-
+                                                <a asp-action="Edit" asp-controller="Contacts" asp-route-id="@contact.ContactId" class="btn btn-outline-secondary">
+                                                    <i class="icofont-edit text-success"></i>
+                                                </a>
+                                                @* href="@Url.Action("Edit", "Contacts", new { id = contact.ContactId })" *@
                                                 <form asp-action="Delete" asp-route-id="@contact.ContactId" method="post">
                                                     <input type="hidden" name="ContactId" value="@contact.ContactId" />
                                                     <button type="submit" class="btn btn-outline-secondary"><i class="icofont-ui-delete text-danger"></i></button>
