--- a/FashionShop-Admin/Views/Orders/Index.cshtml
+++ b/FashionShop-Admin/Views/Orders/Index.cshtml
@@ -51,7 +51,7 @@
 
 <div class="body d-flex py-3">
 	<div class="container-xxl">
-		<h2>@ViewBag.Title</h2>
+		<h2 class="fw-bold">@ViewBag.Title</h2>
 		<div class="row g-3 mb-3">
 			<div class="col-md-12">
 				<div class="card">
