--- a/FashionShop-Admin/Views/Shared/Components/Sidebar/Default.cshtml
+++ b/FashionShop-Admin/Views/Shared/Components/Sidebar/Default.cshtml
@@ -1,17 +1,11 @@
 ﻿@using System.Security.Claims
 @model List<FashionShop.Models.views.SidebarItem>
 
-@{
-    
-}
-
 <!-- sidebar -->
 <div class="sidebar px-4 py-4 py-md-4 me-0">
     <div class="d-flex flex-column h-100">
         <a href="/dashboard" class="mb-0 brand-icon">
-            <span class="logo-icon">
-                <i class="bi bi-bag-check-fill fs-4"></i>
-            </span>
+            <img src="~/images/FashionShop.jpg" class="avatar rounded lg" alt="FashionShop" />
             <span class="logo-text">FashionShop</span>
         </a>
         <!-- Menu: main ul -->
