--- a/FashionShop-Admin/Views/Shared/_Layout.cshtml
+++ b/FashionShop-Admin/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"] - FashionShop-Admin</title>
+    <link rel="icon" href="~/images/FashionShop.jpg" type="image/x-icon">
     @* my css *@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <!-- plugin css file  -->
