--- a/FashionShop-Admin/Views/Roles/Index.cshtml
+++ b/FashionShop-Admin/Views/Roles/Index.cshtml
@@ -1,8 +1,9 @@
-﻿@model FashionShop.Models.views.EmployeeViewModel.EmployeeViewModel
+@model FashionShop.Models.views.RoleViewModels.RoleViewModel
 
 @{
-    ViewBag.Title = "Employees";
+    ViewBag.Title = "Roles";
 }
+
 @section styles{
     <link rel="stylesheet" href="~/plugin/datatables/responsive.dataTables.min.css">
     <link rel="stylesheet" href="~/plugin/datatables/dataTables.bootstrap5.min.css">
@@ -30,60 +31,37 @@
                             <thead>
                             <tr>
                                 <th>Id</th>
-                                <th>Avatar</th>
                                 <th>Name</th>
-                                <th>Position</th>
-                                <th>Phone</th>
-                                <th>Email</th>
-                                <th>Birth</th>
                                 <th>Description</th>
-                                <th>Address</th>
-                                <th>Role</th>
-                                <th>Store</th>
-                                <th>CreatedDate</th>
                                 <th>Status</th>
                                 <th>Action</th>
                             </tr>
                             </thead>
                             <tbody>
-                            @foreach (var employee in Model.Employees)
+                            @foreach (var role in Model.Roles)
                             {
                                 <tr>
-                                    <td><strong>#@employee.EmployeeId</strong></td>
+                                    <td><strong>#@role.RoleId</strong></td>
+                                    <td>@role.RoleName</td>
+                                    <td>@role.Description</td>
                                     <td>
                                         @{
-                                            var avatar = !string.IsNullOrEmpty(employee.Avatar) ? Url.Content("~/uploaded/" + employee.Avatar) : Url.Content("~/images/avatar-user.webp");
-                                        }
-                                        <img src="@avatar" alt="@employee.EmployeeName" width="60" height="60" class="img-fluid">
-                                    </td>
-                                    <td>@employee.EmployeeName</td>
-                                    <td>@employee.EmployeePosition</td>
-                                    <td>@employee.Phone</td>
-                                    <td>@employee.Email</td>
-                                    <th>@employee.Birth</th>
-                                    <th class="align-content-center">
-                                        @Html.Raw(employee.Description)
-                                    </th>
-                                    <th>@employee.Address</th>
-                                    <td>@employee.Role?.RoleName</td>
-                                    <td>@employee.Store?.StoreName</td>
-                                    <td>@employee.CreatedAt</td>
-                                    <td>
-                                        @{
-                                            string statusChange = employee.Status switch
+                                            string statusChange = role.Status switch
                                             {
                                                 "active" => "bg-success",
-                                                "warnning" => "bg-warning",
-                                                "banned" => "bg-danger",
+                                                "inactive" => "bg-danger",
                                                 _ => ""
                                             };
                                         }
-                                        <span class="badge @statusChange">@employee.Status</span>
+                                        <span class="badge @statusChange">@role.Status</span>
                                     </td>
                                     <td>
                                         <div class="btn-group" role="group" aria-label="Basic outlined example">
-                                            <a asp-action="Edit" asp-route-id="@employee.EmployeeId" class="btn btn-outline-secondary"><i class="icofont-edit text-success"></i></a>
-                                            <button type="button" class="btn btn-outline-secondary deleterow"><i class="icofont-ui-delete text-danger"></i></button>
+                                            <a asp-action="Edit" asp-route-id="@role.RoleId" class="btn btn-outline-secondary"><i class="icofont-edit text-success"></i></a>
+                                            <form asp-action="Delete" method="post">
+                                                <input type="hidden" name="id" value="@role.RoleId" />
+                                                <button type="submit" class="btn btn-outline-danger"><i class="icofont-ui-delete text-danger"></i></button>
+                                            </form>
                                         </div>
                                     </td>
                                 </tr>
@@ -97,5 +75,4 @@
         </div>
     </div>
 </div>
-
 
