--- a/FashionShop-Admin/Views/Orders/Index.cshtml
+++ b/FashionShop-Admin/Views/Orders/Index.cshtml
@@ -70,10 +70,10 @@
 									<th>Action</th>
 								</tr>
 							</thead>
-							<tbody>
+							<tbody class="tbody-order">
 								@foreach (var order in Model)
 								{
-									<tr data-id="@order.OrderId">
+									<tr class="hover" data-id="@order.OrderId">
 										<td><strong>#@order.OrderId</strong></td>
 										<td>@order.Store.StoreName</td>
 										<td>@order.Customer.CustomerName</td>
