Hiển thị thông tin Website để chỉnh sửa

--- a/FashionShop-Admin/Views/Employees/Create.cshtml
+++ b/FashionShop-Admin/Views/Employees/Create.cshtml
@@ -247,20 +247,20 @@
                                                 <span asp-validation-for="StoreId" class="text-danger"></span>
                                             </div>
                                             <div>
-                                                <label for="Description">Description</label>
+                                                <label for="Description" class="form-label">Description</label>
                                                 <textarea id="editor" asp-for="Description">
-                                                    <h4>Enter your desciption</h4>
+                                                    
                                                 </textarea>
                                             </div>
                                             <div class="col-md-6">
                                                 <label for="Password" class="form-label">Password</label>
-                                                <input type="password" class="form-control" asp-for="Password" id="Password" tabindex="5">
+                                                <input type="password" class="form-control" asp-for="Password" id="Password" tabindex="7">
                                                 <span asp-validation-for="Password" class="text-danger"></span>
 
                                             </div>
                                             <div class="col-md-6">
                                                 <label for="ConfirmPassword" class="form-label">Confirm Password</label>
-                                                <input type="password" class="form-control" asp-for="ConfirmPassword" id="ConfirmPassword" tabindex="7">
+                                                <input type="password" class="form-control" asp-for="ConfirmPassword" id="ConfirmPassword" tabindex="8">
                                                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
 
                                             </div>
