--- a/FashionShop-Admin/Views/Employees/Index.cshtml
+++ b/FashionShop-Admin/Views/Employees/Index.cshtml
@@ -10,6 +10,21 @@
 @section Scripts{
     <script src="~/bundles/dataTables.bundle.js"></script>
     <script src="~/js/template.js"></script>
+    <script>
+        // project data table
+        $(document).ready(function() {
+            $('#myProjectTable')
+                .addClass( 'nowrap' )
+                .dataTable( {
+                    responsive: true,
+                    paging: false,
+                    info: false,
+                    columnDefs: [
+                        { targets: [-1, -3], className: 'dt-body-right' }
+                    ]
+                });
+        });
+    </script>
 }
 <!-- Body: Body -->
 <div class="body d-flex py-3">
@@ -26,7 +41,7 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-body">
-                        <table id="myDataTable" class="table table-hover align-middle mb-2" style="width: 100%;">
+                        <table id="myProjectTable" class="table table-hover align-middle mb-2" style="width: 100%;">
                             <thead>
                             <tr>
                                 <th>Id</th>
@@ -36,7 +51,6 @@
                                 <th>Phone</th>
                                 <th>Email</th>
                                 <th>Birth</th>
-                                <th>Description</th>
                                 <th>Address</th>
                                 <th>Role</th>
                                 <th>Store</th>
@@ -61,10 +75,9 @@
                                     <td>@employee.Phone</td>
                                     <td>@employee.Email</td>
                                     <th>@employee.Birth</th>
-                                    <th class="align-content-center">
-                                        @Html.Raw(employee.Description)
+                                    <th class="align-content-center text-truncate" style="max-width: 150px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                                        <p class="mb-0">@employee.Address</p>
                                     </th>
-                                    <th>@employee.Address</th>
                                     <td>@employee.Role?.RoleName</td>
                                     <td>@employee.Store?.StoreName</td>
                                     <td>@employee.CreatedAt</td>
