--- a/FashionShop-Admin/Views/Roles/Index.cshtml
+++ b/FashionShop-Admin/Views/Roles/Index.cshtml
@@ -18,8 +18,8 @@
         <div class="row align-items-center">
             <div class="border-0 mb-4">
                 <div class="card-header py-3 no-bg bg-transparent d-flex align-items-center px-0 justify-content-between border-bottom flex-wrap">
-                    <h3 class="fw-bold mb-0">Employees List</h3>
-                    <a asp-action="Create" asp class="btn btn-primary py-2 px-5 btn-set-task w-sm-100"><i class="icofont-plus-circle me-2 fs-6"></i> Add Employee</a>
+                    <h3 class="fw-bold mb-0">Roles List</h3>
+                    <a asp-action="Create" asp class="btn btn-primary py-2 px-5 btn-set-task w-sm-100"><i class="icofont-plus-circle me-2 fs-6"></i> Add Role</a>
                 </div>
             </div>
         </div> <!-- Row end  -->
