--- a/FashionShop-Admin/Views/Products/Create.cshtml
+++ b/FashionShop-Admin/Views/Products/Create.cshtml
@@ -47,7 +47,7 @@
                     <label asp-for="CategoryName" class="form-label">CategoryName</label>
                     <select asp-for="CategoryName" name="CategoryName" class="form-select rounded-pill">
                         <option selected>Select-CategoryName</option>
-                        @foreach(var category in Model?.Categories)
+                        @foreach (var category in Model?.Categories)
                         {
                             <option asp-for="CategoryName">@category.CategoryName</option>
                         }
@@ -56,7 +56,8 @@
                 <div class="mb-3">
                     <label asp-for="Status" class="form-label">Status</label>
                     <select asp-for="Status" name="CategoryName" class="form-select rounded-pill">
-                        <option selected>available</option>
+                        <option>available</option>
+                        <option selected>watting</option>
                         <option>unavailable</option>
                     </select>
                 </div>
@@ -70,8 +71,8 @@
     <script>
         function xuLySlug(nameProduct) {
             var result = nameProduct.toLowerCase();
-            result = result.replace(/à|ả|ã|á|ạ|ă|ằ|ẳ|ẵ|ắ|ặ|â|ầ|ẩ|ẫ|ấ|ậ/gi,'a');
-            result = result.replace(/i|í|ì|ỉ|ĩ|ị/gi,'i');
+            result = result.replace(/à|ả|ã|á|ạ|ă|ằ|ẳ|ẵ|ắ|ặ|â|ầ|ẩ|ẫ|ấ|ậ/gi, 'a');
+            result = result.replace(/i|í|ì|ỉ|ĩ|ị/gi, 'i');
             result = result.replace(/é|è|ẻ|ẽ|ẹ|ê|ế|ề|ể|ễ|ệ/gi, 'e');
             result = result.replace(/ó|ò|ỏ|õ|ọ|ô|ố|ồ|ổ|ỗ|ộ|ơ|ớ|ờ|ở|ỡ|ợ/gi, 'o');
             result = result.replace(/ú|ù|ủ|ũ|ụ|ư|ứ|ừ|ử|ữ|ự/gi, 'u');
@@ -96,8 +97,6 @@
                 success: function (res) {
                     if (res.statusCode == 0) {
                         $("#errorSlug").text("Vui long nhap lai ten san pham, vi slug nay da ton tai");
-                        $("#ProductName").val("");
-                        $("#Slug").val("");
                         $("#ProductName").focus();
                     } else {
                         $("#errorSlug").text("");
@@ -111,12 +110,12 @@
 
         $(document).ready(function () {
             document.getElementById('ProductName').addEventListener('input', function (e) {
-              handleCheckSlug();
+                handleCheckSlug();
             })
         })
     </script>
 }
-  
-   
+
+
 
 
