--- a/FashionShop-Admin/Views/Products/Edit.cshtml
+++ b/FashionShop-Admin/Views/Products/Edit.cshtml
@@ -19,7 +19,7 @@
         </div>
         <div class="row g-3 mb-3">
             <form asp-action="Edit" asp-route-id="@Model.ProductId" method="post" enctype="multipart/form-data">
-                <input hidden value="@Model.ProductId" asp-for="ProductId"/>
+                <input hidden value="@Model.ProductId" asp-for="ProductId" />
                 <div class="mb-3">
                     <label asp-for="ProductName" class="form-label">ProductName</label>
                     <input tabindex="1" asp-for="ProductName" type="text" class="form-control rounded-pill " id="ProductName" name="ProductName" value="@Model.ProductName" />
@@ -33,7 +33,7 @@
                 <div class="mb-3">
                     <label asp-for="Banner" class="form-label">Banner</label>
                     <input tabindex="2" asp-for="Banner" type="file" class="form-control rounded-pill " id="Banner" name="Banner" value="@Model.BannerUrl" />
-                   
+
                 </div>
                 <div class="mb-3">
                     <label asp-for="Description" class="form-label">Description</label>
@@ -58,6 +58,7 @@
                     <select asp-for="Status" name="Status" class="form-select rounded-pill">
                         <option asp-for="Status" selected="@(Model.Status== "available" ? true: false)">available</option>
                         <option asp-for="Status" selected="@(Model.Status== "unavailable" ? true: false)">unavailable</option>
+                        <option asp-for="Status" selected="@(Model.Status== "watting" ? true: false)">watting</option>
                     </select>
                 </div>
                 <button type="submit" class="btn btn-primary" id="submit_add">Cập Nhật Sản Phẩm</button>
@@ -67,7 +68,7 @@
 </div>
 
 @section Scripts {
-   @*  <script src="~/js/handlercheckslug.js" type="module"></script> *@
+    @*  <script src="~/js/handlercheckslug.js" type="module"></script> *@
     <script>
         function xuLySlug(nameProduct) {
             var result = nameProduct.toLowerCase();
