--- a/FashionShop-Admin/Views/Products/Index.cshtml
+++ b/FashionShop-Admin/Views/Products/Index.cshtml
@@ -10,8 +10,8 @@
 }
 @section Scripts {
     <script src="~/bundles/dataTables.bundle.js"></script>
-   @* Xử lý cập nhật categoryID và status *@
-        <script src="~/js/HandlerUpdateProduct.js" type="module">
+    @* Xử lý cập nhật categoryID và status *@
+    <script src="~/js/HandlerUpdateProduct.js" type="module">
     </script>
 }
 <!-- Body: Body -->
@@ -48,7 +48,7 @@
                             <tbody>
                                 @foreach (var product in Model?.Products)
                                 {
-                                        <tr id="@product.ProductId">
+                                    <tr id="@product.ProductId">
                                         <td><strong>#@product.ProductId</strong></td>
                                         <td>@product.ProductName</td>
                                         <td>@product.Slug</td>
@@ -59,10 +59,10 @@
                                             <select id="category-@(product.ProductId)" class="badge bg-success" value="">
                                                 @foreach (var category in Model?.Categories)
                                                 {
-                                                   <option selected=@(product.CategoryId == category.CategoryId ? true : false)
+                                                    <option selected=@(product.CategoryId == category.CategoryId ? true : false)
                                                             value="@category.CategoryName">
-                                                            @category.CategoryName
-                                                   </option>
+                                                        @category.CategoryName
+                                                    </option>
                                                 }
                                             </select>
                                         </td>
@@ -73,19 +73,23 @@
                                                 string color = product.Status switch
                                                 {
                                                     "available" => "bg-success",
-                                                    "unavailable" => "bg-warning",
+                                                    "unavailable" => "bg-danger",
+                                                    "watting" => "bg-warning",
                                                     _ => "Unknown"
                                                 };
                                             }
                                             <select id="status-@(product.ProductId)" class="badge @color">
                                                 <option selected="@(product.Status == "available" ? true : false)">available</option>
                                                 <option selected="@(product.Status == "unavailable" ? true : false)">unavailable</option>
+                                                <option selected="@(product.Status == "watting" ? true : false)">watting</option>
                                             </select>
                                         </td>
                                         <td>
                                             <div class="btn-group" role="group" aria-label="Basic outlined example">
                                                 <a asp-action="Edit" asp-route-id="@product.ProductId" class="btn btn-outline-secondary"><i class="icofont-edit text-success"></i></a>
-                                                <button type="button" class="btn btn-outline-secondary deleterow"><i class="icofont-ui-delete text-danger"></i></button>
+                                                <form asp-action="Delete" asp-route-id="@product.ProductId" method="post">
+                                                    <button type="submit" class="btn btn-outline-secondary deleterow"><i class="icofont-ui-delete text-danger"></i></button>
+                                                </form>
                                             </div>
                                         </td>
                                     </tr>
