--- a/FashionShop-Admin/Views/Dashboard/Index.cshtml
+++ b/FashionShop-Admin/Views/Dashboard/Index.cshtml
@@ -4,6 +4,7 @@
 @section Styles{
     <link rel="stylesheet" href="~/plugin/datatables/responsive.dataTables.min.css">
     <link rel="stylesheet" href="~/plugin/datatables/dataTables.bootstrap5.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
 }
 @section Scripts{
     <!-- Plugin Js -->
@@ -11,6 +12,9 @@
     <script src="~/js/page/index.js"></script>
     <script src="~/bundles/dataTables.bundle.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB1Jr7axGGkwvHRnNfoOzoVRFV3yOPHJEU&amp;callback=myMap"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
     <script>
         $('#myDataTable')
             .addClass( 'nowrap')
@@ -20,6 +24,9 @@
                     { targets: [-1, -3], className: 'dt-body-right' }
                 ]
             });
+    </script>
+    <script>
+        
     </script>
 }
 <!-- Body: Body -->
@@ -707,6 +714,9 @@
                 </div>
             </div>
         </div><!-- Row end  -->
-        
+        <div class="row g-3 mb-3">
+            <h1 class="fw-bold">Thống kê doanh thu</h1>
+            
+        </div>
     </div>
 </div>
