--- a/FashionShop-Admin/Views/Orders/Details.cshtml
+++ b/FashionShop-Admin/Views/Orders/Details.cshtml
@@ -129,7 +129,7 @@
 		<div class="row align-items-center">
 			<div class="border-0 mb-4">
 				<div class="card-header py-3 no-bg bg-transparent d-flex align-items-center px-0 justify-content-between border-bottom flex-wrap">
-					<a asp-action="Index" asp-controller="Orders" class="btn btn-primary">Orders List </a>
+					<a asp-action="Index" asp-controller="Orders" class="btn btn-primary"><i class="icofont-bubble-left "></i> Orders List</a>
 					<h3 class="fw-bold mb-0">Order Details: #@Model.OrderId</h3>
 				</div>
 			</div>
