--- a/FashionShop-Admin/Views/Categories/Index.cshtml
+++ b/FashionShop-Admin/Views/Categories/Index.cshtml
@@ -62,6 +62,16 @@
         <div class="row g-3 mb-3">
             <div class="col-md-12">
                 <div class="card">
+                    <div class="card-header">
+                        <div style="float:left">
+                            <form asp-action="Index" method="get">
+                                <div class="input-group">
+                                    <input name="nameSearch" placeholder="Search for name..." />
+                                    <input type="submit" value="Search" />
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                     <div class="card-body">
                         <table id="myDataTable" class="table table-hover align-middle mb-0" style="width: 100%;">
                             <thead>
@@ -109,7 +119,7 @@
                                 }
                             </tbody>
                         </table>
-                        <div page-model="@Model?.PagingInfo" page-action="Index" page-class="btn" page-classes-enabled="true" page-class-normal="btn-outline-dark" page-class-selected="btn-primary" class="btn-group m-1"></div>
+                        <div page-model="@Model?.PagingInfo" page-action="Index" page-search="@Model?.NameSearch" page-class="btn" page-classes-enabled="true" page-class-normal="btn-outline-dark" page-class-selected="btn-primary" class="btn-group m-1"></div>
                     </div>
                 </div>
             </div>
