--- a/FashionShop-Admin/Views/Authenticate/Login.cshtml
+++ b/FashionShop-Admin/Views/Authenticate/Login.cshtml
@@ -46,7 +46,7 @@
                                         <div class="form-label">
                                             <span class="d-flex justify-content-between align-items-center">
                                                 Password
-                                                <a class="text-secondary" href="/">Forgot Password?</a>
+                                                <a class="text-secondary" asp-action="ForgetPassword">Forgot Password?</a>
                                             </span>
                                         </div>
                                         <input type="password" asp-for="Password" class="form-control form-control-lg" placeholder="***************">
