--- a/FashionShop-Admin/Views/Products/Index.cshtml
+++ b/FashionShop-Admin/Views/Products/Index.cshtml
@@ -93,7 +93,7 @@
                                         </td>
                                         <td>
                                             <div class="btn-group" role="group" aria-label="Basic outlined example">
-                                                <a asp-action="Edit" asp-route-id="@product.ProductId" class="btn btn-outline-secondary"><i class="icofont-edit text-success"></i></a>
+                                                <a asp-action="Edit" asp-route-slug="@product.Slug" class="btn btn-outline-secondary"><i class="icofont-edit text-success"></i></a>
                                                 <form asp-action="Delete" asp-route-id="@product.ProductId" method="post">
                                                     <button type="submit" class="btn btn-outline-secondary deleterow"><i class="icofont-ui-delete text-danger"></i></button>
                                                 </form>
