--- a/FashionShop-Admin/Views/Dashboard/Index.cshtml
+++ b/FashionShop-Admin/Views/Dashboard/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model FashionShop.Models.views.DashboardViewModel.CountDashboardViewModel
+@{
 	ViewData["Title"] = "Dashboard";
 }
 @section Styles {
@@ -374,48 +375,56 @@
 
 		<div class="row g-3 mb-3 row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-2 row-cols-xl-4">
 			<div class="col">
+                <a asp-controller="Products" asp-action="Index">
 				<div class="alert-success alert mb-0">
 					<div class="d-flex align-items-center">
 						<div class="avatar rounded no-thumbnail bg-success text-light"><i class="fa fa-dollar fa-lg"></i></div>
 						<div class="flex-fill ms-3 text-truncate">
-							<div class="h6 mb-0">Revenue</div>
-							<span class="small">$18,925</span>
+							<div class="h6 mb-0">Products</div>
+							<span class="small">@Model.CountProduct</span>
 						</div>
 					</div>
-				</div>
+                    </div>
+                </a>
 			</div>
 			<div class="col">
+				<a asp-controller="Categories" asp-action="Index">
 				<div class="alert-danger alert mb-0">
 					<div class="d-flex align-items-center">
 						<div class="avatar rounded no-thumbnail bg-danger text-light"><i class="fa fa-credit-card fa-lg"></i></div>
 						<div class="flex-fill ms-3 text-truncate">
-							<div class="h6 mb-0">Expense</div>
-							<span class="small">$11,024</span>
+							<div class="h6 mb-0">Categories</div>
+							<span class="small">@Model.CountCategory</span>
 						</div>
 					</div>
 				</div>
+				</a>
 			</div>
 			<div class="col">
+				<a asp-controller="Orders" asp-action="Index">
 				<div class="alert-warning alert mb-0">
 					<div class="d-flex align-items-center">
 						<div class="avatar rounded no-thumbnail bg-warning text-light"><i class="fa fa-smile-o fa-lg"></i></div>
 						<div class="flex-fill ms-3 text-truncate">
-							<div class="h6 mb-0">Happy Clients</div>
-							<span class="small">8,925</span>
+							<div class="h6 mb-0">Orders</div>
+							<span class="small">@Model.CountOrder</span>
 						</div>
 					</div>
 				</div>
+				</a>
 			</div>
 			<div class="col">
+				@* <a asp-controller="Customers" asp-action="Index"> *@
 				<div class="alert-info alert mb-0">
 					<div class="d-flex align-items-center">
 						<div class="avatar rounded no-thumbnail bg-info text-light"><i class="fa fa-shopping-bag" aria-hidden="true"></i></div>
 						<div class="flex-fill ms-3 text-truncate">
-							<div class="h6 mb-0">New StoreOpen</div>
-							<span class="small">8,925</span>
+							<div class="h6 mb-0">Customers</div>
+							<span class="small">@Model.CountCustomer</span>
 						</div>
 					</div>
 				</div>
+				@* </a> *@
 			</div>
 		</div><!-- Row end  -->
 
