Add login and register client

--- a/FashionShop-API/Templates/ConfirmTemplate.html
+++ b/FashionShop-API/Templates/ConfirmTemplate.html
@@ -186,7 +186,7 @@
                                                             align="left">
                                                             <div style="cursor:auto;color:#737F8D;font-family:Whitney, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;font-size:16px;line-height:24px;text-align:left;">
                                                                 <p>
-                                                                    <img src="../wwwroot/assets/Logo.png"
+                                                                    <img src="https://static.vecteezy.com/system/resources/previews/013/223/348/original/fashion-shop-logo-design-with-creative-concept-premium-vector.jpg"
                                                                          alt="Party Wumpus" title="None" width="400"
                                                                          style="height: auto;display: flex;justify-items: center;align-items: center;margin: auto;">
                                                                 </p>
