--- a/FashionShop-Client/src/index.css
+++ b/FashionShop-Client/src/index.css
@@ -12,8 +12,7 @@
     --uib-color: #183153;
     position: relative;
     display: flex;
-    align-items: center;
-    justify-content: flex-start;
+    align-items: normal;
     height: var(--uib-size);
     width: var(--uib-size);
 }
@@ -25,14 +24,14 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    height: 100%;
-    width: 100%;
+    height: 150%;
+    width: 150%;
 }
 
 .dot-spinner__dot::before {
     content: '';
-    height: 20%;
-    width: 20%;
+    height: 15%;
+    width: 15%;
     border-radius: 50%;
     background-color: var(--uib-color);
     transform: scale(0);
