--- a/FashionShop-Admin/Views/Products/Index.cshtml
+++ b/FashionShop-Admin/Views/Products/Index.cshtml
@@ -17,7 +17,7 @@
         <div class="row align-items-center">
             <div class="border-0 mb-4">
                 <div class="card-header py-3 no-bg bg-transparent d-flex align-items-center px-0 justify-content-between border-bottom flex-wrap">
-                    <h3 class="fw-bold mb-0">Product List</h3>
+                    <h3 class="fw-bold mb-0"><a asp-action="Index">Product List</a></h3>
                     <a asp-action="Create" asp class="btn btn-primary py-2 px-5 btn-set-task w-sm-100"><i class="icofont-plus-circle me-2 fs-6"></i> Add Product</a>
                 </div>
             </div>
