--- a/FashionShop-Client/src/index.css
+++ b/FashionShop-Client/src/index.css
@@ -2,7 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-
+@layer base{
+    *,
+    *::before,
+    *::after {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+    }
+    html,body{
+        height: 100%;
+        scroll-behavior: smooth;
+    }
+}
 
 
 /* From Uiverse.io by abrahamcalsin */
