--- a/FashionShop-Client/src/index.css
+++ b/FashionShop-Client/src/index.css
@@ -3,16 +3,12 @@
 @tailwind utilities;
 
 @layer base{
-    *,
-    *::before,
-    *::after {
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-    }
     html,body{
         height: 100%;
         scroll-behavior: smooth;
+        margin: 0;
+        padding: 0;
+        @apply font-[Poppins]
     }
 }
 
