--- a/FashionShop-API/Templates/ResetTemplate.html
+++ b/FashionShop-API/Templates/ResetTemplate.html
@@ -145,7 +145,7 @@
                                                 <tr>
                                                     <td style="vertical-align:center;width:640px;">
                                                         <div style="cursor:auto;color:white;font-family:Whitney, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;font-size:36px;font-weight:600;line-height:36px;text-align:center;">
-                                                            Welcome to Fashsion Shop!
+                                                            Reset your password!
                                                         </div>
                                                     </td>
                                                 </tr>
@@ -193,16 +193,10 @@
 
                                                                 <h2 style="font-family: Whitney, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;font-weight: 500;font-size: 20px;color: #4F545C;letter-spacing: 0.27px;">
                                                                     Hey {{Name}},</h2>
-                                                                <p>Wowwee! Thanks for registering an account with
-                                                                    Fashsion Shop!
-                                                                    You're the
-                                                                    coolest person in all the land (and I've met a lot
-                                                                    of really
-                                                                    cool
-                                                                    people).</p>
-                                                                <p>Before we get started, we'll need to verify your
-                                                                    email this link will expire in 5 minutes.</p>
-                                                         </div>
+                                                                <p>Your email address has recently been entered into our website either to register a new account or update the email address of an existing one. However, your email address is already attached to an existing account.</p>
+                                                                <p>Before we get started, we'll need to reset your
+                                                                    password this link will expire in 5 minutes.</p>
+                                                            </div>
                                                         </td>
                                                     </tr>
                                                     <tr>
@@ -217,11 +211,11 @@
                                                                         align="center" valign="middle"
                                                                         bgcolor="#7289DA">
                                                                         <a
-                                                                                href="{{Link}}"
-                                                                                style="border-radius: 10px;padding:10px 25px;text-decoration:none;width: 100%;height:100%;line-height:100%;background:#7289DA;color:white;font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:15px;font-weight:normal;text-transform:none;margin:0px;"
-                                                                                target="_blank">
-                                                                            Verify Email
-                                                                        </a>
+                                                                            href="{{Link}}"
+                                                                            style="border-radius: 10px;padding:10px 25px;text-decoration:none;width: 100%;height:100%;line-height:100%;background:#7289DA;color:white;font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:15px;font-weight:normal;text-transform:none;margin:0px;"
+                                                                            target="_blank">
+                                                                        Click here to reset password
+                                                                    </a>
                                                                     </td>
                                                                 </tr>
                                                                 </tbody>
